--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -14,7 +14,7 @@
 	</div>
 	<div>
 		{% for item in navigation %}
-		<a href="{{ site.url }}{{ site.baseurl }}{{ item.link }}.html" class="menu">{{ item.name }}</a>
+		<a href="{{ site.url }}{{ item.link }}/index.html" class="menu">{{ item.name }}</a>
 		{% endfor %}
 	</div>
 	<footer class="cellC-home">
