--- a/theme/templates/head.html
+++ b/theme/templates/head.html
@@ -2,6 +2,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio: {{ site.title }}</title>
+  <link rel="stylesheet" href="theme/css/styles.css">
   <link rel="stylesheet" href="../theme/css/styles.css">
   <link rel="stylesheet" href="../../theme/css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
