--- a/theme/templates/workpost.html
+++ b/theme/templates/workpost.html
@@ -20,6 +20,6 @@
 	{% endfor %}
 </div>
 
-<a href="../{{ site.url }}/work/index.html" class="button"> BACK </a>
+<a href="{{ site.url }}/work/index.html" class="button"> BACK </a>
 
 {% endblock content %}
