--- a/theme/templates/workportfolio.html
+++ b/theme/templates/workportfolio.html
@@ -6,7 +6,7 @@
 <div class="cellB-portfolio">
   {% for post in worklist %}
   <div class="portfolio-cell">
-    <a href="../{{ site.url }}/{{ post.pagetitle }}/index.html" class="portfolio">
+    <a href="{{ site.url }}/{{ post.pagetitle }}/index.html" class="portfolio">
       <div class="portfolio-cell-link">
         <img class="img-portfolio-thumb" src="{{ site.pathtoimages }}{{ post.thumbnail }}" alt="">
         {{ post.title }}
