--- a/theme/templates/head.html
+++ b/theme/templates/head.html
@@ -2,6 +2,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio: {{ site.title }}</title>
+  <!-- <link rel="stylesheet" href="style/styles.css"> -->
   <link rel="stylesheet" href="{{ site.url }}/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet'
